Revision history for Business-CyberSource

0.006004  2012-08-14

0.006003  2012-08-14
	- start indexing roles, so pod will render

0.006002  2012-08-14
	- fix documentation
	- use Class::Load instead of Module::Runtime
	- use File::ShareDir::ProjectDistDir instead of File::ShareDir

0.006001  2012-06-13
	- MooseX::AbstractFactory should be required again for Rules

0.006000  2012-06-13
	[NEWS]
	- massive refactoring to use MooseX::RemoteHelper and nested object using
	  the composite pattern. Due to this many things have been deprecated.
	  It is possible that some things were accidentally removed, or no
	  compatability layer was added. If you find something outright missing
	  please report a bug

	[DEPRECATIONS]
	- constructors and methods that are now subobjects
	- Business::CyberSource::CreditCard use
	  Business::CyberSource::RequestPart::Card

	[FEATURE - EXPERIMENTAL]
	- rules, see Business::CyberSource::Client rules attribute and
	  Business::CyberSource::Rule
	- TaxService Business::CyberSource::RequestPart::Service::Tax
	  (unfinished and will undergo active development during 0.6.x release )

	[REMOVAL]
	- skipable and ignore skipable, use rules instead
	- numerous roles
	- API's deprecated in 0.005000
	- Dependance on MooseX::Structured and MooseX::Parameterized

0.005004  2012-06-06
	- Make optional dependencies recommended
	- fix bug where score threshold in authorization business rules would
	  not have been set correctly
	- fix duplicate initialization in dcc test

0.005003  2012-05-24
	- Add Missing Dependency DateTime::Format::W3CDTF

0.005002  2012-05-23
	- remove Bread::Board as a request Test Dependency, it's mostly used in
	  cases where credentials are required.
	- remove MooseX::AbstractFactory as a dependency, BC::Factory::Request is
	  optional and not even recommended.

0.005001  2012-05-23
	- remove Test::Exception and Data::Dumper::Concise from deps
	- cleanup tests more

0.005000  2012-05-17
	[NEWS]