@@ -101,6 +101,7 @@ t/new-exceptions.t
 t/new-items.t
 t/new-purchase-totals.t
 t/new-service.t
+t/no-serialize-on-response.t
 t/release-cpan-changes.t
 t/release-dist-manifest.t
 t/release-distmeta.t
