@@ -1,6 +1,8 @@
 Revision history for Business-CyberSource
 
 0.006004  2012-08-14
+	- MooseX::RemoteHelper::CompositeSerialization was accidentally applied to
+	  Response objects, it has been removed from them
 
 0.006003  2012-08-14
 	- start indexing roles, so pod will render
